<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SunCore</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_tip1">太阳能电站</string>
    <string name="start_tip2">SunCore</string>
    <string name="login_title">SunCore</string>
    <string name="login_username_hint">请输入您的账号</string>
    <string name="login_pwd_hint">请输入您的密码</string>
    <string name="login_btn">登录</string>
    <string name="loading_msg">正在登录</string>
    <string name="table_weather">天气</string>
    <string name="table_power">发电量</string>
    <string name="table_device">设备</string>
    <string name="table_order">工单</string>
    <string name="exit_title">退出系统</string>
    <string name="exit_msg">退出后，你将接受不到新的消\n息,确定要退出</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="weather_station">天气</string>
    <string name="weather_refresh">刷新</string>
    <string name="weather_temp">5°</string>
    <string name="weather_description1">晴\nxx度-xx度\n西北风n级\n</string>
    <string name="weather_description2">06/08 壬辰年六月八日\n北京市气象台08:15发布</string>
    <string name="weather_btn_desc1">周二\nxx℃/xx℃</string>
    <string name="weather_btn_desc2">周三\nxx℃/xx℃</string>
    <string name="weather_btn_desc3">周四\nxx℃/xx℃</string>
    <string name="pic_desc">picture description</string>
    <string name="order_item_name">工单名称</string>
    <string name="order_state">Order State</string>
    <string name="order_refresh_tips1">下拉刷新</string>
    <string name="order_refresh_tips2">上次更新</string>
    <string name="unsolved_orders">未完成工单</string>
    <string name="solved_orders">已完成工单</string>
    <string name="array_power">按阵列查询</string>
    <string name="unit_power">按单元查询</string>
    <string name="station_power">按发电站查询</string>
    <string name="power_result_title">发电量查询结果</string>
    <string name="search">搜索</string>
    <string name="order_list">工单列表</string>
    <string name="order_detail_title">工单名称</string>
    <string name="order_detail_desc">工单详情\nBalalala\nBalalala\nLalalalalalalaal\nOK,La wan le</string>
    <string name="order_detail_exit">处理订单</string>
    <string name="order_detail_complete">完成订单</string>
    <string name="power_list_name">发电单位名称</string>
    <string name="power_list_content">1000KW/H</string>
    <string name="check_device">检测设备</string>
    <string name="warning_no">警告编号：2212233</string>
    <string name="warning_level">警告级别：F级</string>
    <string name="warning_time">警告时间：2013-6-4</string>
    <string name="main">主界面</string>
	<string name="main_weather">天气查询</string>
	<string name="main_device">设备查询</string>
	<string name="main_power_array">阵列发电量</string>
	<string name="main_power_unit">单元发电量</string>
	<string name="main_power_station">电站发电量</string>
	<string name="main_order_unsolved">未完成工单</string>
	<string name="main_order_solved">完成工单</string>
	<string name="main_exit">退出登录</string>
</resources>