<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/mm_listitem"
    android:clickable="true"
    android:gravity="center_vertical"
    >

    <ImageView
        android:id="@+id/head"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:paddingLeft="5dp"
        android:src="@drawable/login_error_icon"
        android:contentDescription="@string/pic_desc" />

    <TextView
        android:id="@+id/device_warning_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/head"
        android:padding="7dp"
        android:text="@string/warning_no"
        android:textColor="#000" />

    <TextView
        android:id="@+id/device_warning_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="7dp"
        android:text="@string/warning_level"
        android:textColor="#666" />

    <TextView
        android:id="@+id/device_warning_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/head"
        android:padding="7dp"
        android:text="@string/warning_time"
        android:textColor="#666" />

</RelativeLayout>