<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:id="@+id/power_title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:background="@drawable/title_bar">
        <TextView
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:text="@string/table_power"
        	android:layout_centerInParent="true"
        	android:textSize="20sp"		
			android:textColor="#ffffff" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/array_power"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:onClick="mainPageClickListener"
        android:background="@drawable/preference_single_item"
        >
        <ImageView 
            android:id="@+id/array_power_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="matrix"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/power_img"
            android:contentDescription="@string/pic_desc"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/array_power_img"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:text="@string/array_power"
            android:textSize="17sp"
            android:textColor="#000"
            />
        <ImageView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"        	     	
        	android:scaleType="matrix"
        	android:layout_centerVertical="true"
        	android:layout_alignParentRight="true"
        	android:src="@drawable/mm_submenu"
        	android:contentDescription="@string/pic_desc" 
        	/>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/unit_power"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:onClick="mainPageClickListener"
        android:background="@drawable/preference_single_item"
        >
        <ImageView 
            android:id="@+id/unit_power_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="matrix"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/power_img"
            android:contentDescription="@string/pic_desc"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/unit_power_img"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:text="@string/unit_power"
            android:textSize="17sp"
            android:textColor="#000"
            />
        <ImageView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"        	     	
        	android:scaleType="matrix"
        	android:layout_centerVertical="true"
        	android:layout_alignParentRight="true"
        	android:src="@drawable/mm_submenu"
        	android:contentDescription="@string/pic_desc" 
        	/>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/station_power"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:onClick="mainPageClickListener"
        android:background="@drawable/preference_single_item"
        >
        <ImageView 
            android:id="@+id/station_power_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="matrix"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/power_img"
            android:contentDescription="@string/pic_desc"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/station_power_img"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:text="@string/station_power"
            android:textSize="17sp"
            android:textColor="#000"
            />
        <ImageView
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"        	     	
        	android:scaleType="matrix"
        	android:layout_centerVertical="true"
        	android:layout_alignParentRight="true"
        	android:src="@drawable/mm_submenu"
        	android:contentDescription="@string/pic_desc" 
        	/>
    </RelativeLayout>

</LinearLayout>
