<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/head_portrait"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="0dp"
            android:layout_weight="2"
            android:src="@drawable/headportrait" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/login_username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/login_editbox"
                android:drawableLeft="@drawable/user"
                android:hint="@string/login_username_hint"
                android:singleLine="true"
                android:text="wjh"
                android:textColor="#000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginRight="2dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/login_pwd_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                     android:background="@drawable/login_editbox"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_weight="3"
                    android:drawableLeft="@drawable/key"
                    android:hint="@string/login_pwd_hint"
                    android:password="true"
                    android:singleLine="true"
                    android:text="wjh"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/login_login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login"
                    android:text="@string/login_btn"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>